--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,12 @@ hr{
 	width: 100%;
 	height: 80px;
 }
+
+.gallery {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.gallery_item { 
+  margin: 5px;
+}
